package com.bancoregio.sgisi.modelo;

/**
 * Usuario con rol analista SOC.
 */
public class AnalistaSoc extends Usuario {
    /**
     * Crea analista.
     */
    public AnalistaSoc(int id, String n, String a, String e) {
        super(id, n, a, e, "ANALISTA_SOC");
    }
}
