package com.bancoregio.sgisi.modelo;

/**
 * Catálogo de severidad.
 */
public record NivelSeveridad(int id, String nombre, int nivelPrioridad) {
}
